--- a/index.html
+++ b/index.html
@@ -235,16 +235,47 @@
       background-color: #c82333 !important;
     }
 
+    /* Button state when only warnings (e.g., extra spaces) are present. */
+    .warn-button {
+      background-color: #ffc107 !important;
+      color: #212529 !important;
+    }
+    .warn-button:hover {
+      background-color: #e0a800 !important;
+    }
+
     /* Lighten the appearance of error highlights in Ace to reduce visual noise. */
     .ace_editor .ace_error {
-      background-color: #fee2e2;
+      background-color: #fee2e2 !important;
     }
     .ace_editor .ace_gutter-cell.ace_error {
-      background-color: #fee2e2;
-      color: #721c24;
+      background-color: #fee2e2 !important;
+      color: #721c24 !important;
     }
     .ace_editor .ace_marker-layer .ace_error {
-      background-color: #fecaca;
+      background-color: #fecaca !important;
+    }
+
+    /* Lighten warning annotations (e.g., trailing whitespace) and make them less intrusive. */
+    .ace_editor .ace_warning {
+      background-color: #fff7e6 !important;
+    }
+    .ace_editor .ace_gutter-cell.ace_warning {
+      background-color: #fff7e6 !important;
+      color: #856404 !important;
+    }
+    .ace_editor .ace_marker-layer .ace_warning {
+      background-color: #ffe8a1 !important;
+    }
+
+    /* Version label styling */
+    .version-label {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      font-size: 12px;
+      color: gray;
+      z-index: 1000;
     }
 
   </style>
@@ -255,6 +286,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.14/theme-chrome.js"></script>
 </head>
 <body>
+  <!-- Version label displayed in the top right corner.  The actual value is populated via a GitHub API call below. -->
+  <div class="version-label" id="versionLabel">Version: loading…</div>
   <h1>GTM Playground</h1>
 
   <label for="gtmId">Enter your GTM Container ID:</label><br>
@@ -300,6 +333,8 @@
       <div class="preset-header-actions">
         <button class="small-button" onclick="copyCustom()">Copy as dataLayer.push</button>
         <button class="small-button" onclick="copyCustomDL()">Copy as datalayer.js block</button>
+        <!-- Trim spaces button is hidden by default and will appear only when trailing whitespace exists -->
+        <button class="small-button" id="customTrimBtn" onclick="trimCustom()" style="display:none;">Trim spaces</button>
       </div>
     </div>
     <!-- Hidden textarea to hold the raw code for persistence.  Ace will sync
@@ -328,6 +363,29 @@ dataLayer.push({
   <script src="datalayer.js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
+
+  // Fetch the latest commit SHA from GitHub and display it in the version label.
+  (function loadVersionLabel() {
+    const versionEl = document.getElementById('versionLabel');
+    if (!versionEl) return;
+    // Use GitHub API to retrieve the latest commit on the main branch.  This call is
+    // unauthenticated and therefore public; it will succeed as long as the API
+    // supports CORS for anonymous requests.
+    fetch('https://api.github.com/repos/rune-andersen/gtm-datalayer-playground/commits/main')
+      .then((resp) => resp.ok ? resp.json() : null)
+      .then((data) => {
+        if (!data) return;
+        // The API returns either a commit object or an array of commits depending on the endpoint.
+        const sha = Array.isArray(data) ? (data[0] && data[0].sha) : data.sha;
+        if (sha) {
+          versionEl.textContent = 'Commit: ' + sha.substring(0, 7);
+        }
+      })
+      .catch(() => {
+        // If the fetch fails, quietly fall back to a static version string.
+        versionEl.textContent = '';
+      });
+  })();
 
   function loadGTM() {
     const id = document.getElementById('gtmId').value.trim();
@@ -381,6 +439,18 @@ dataLayer.push({
     navigator.clipboard.writeText(fullBlock).then(() => {
       log('📋 Copied custom JS as datalayer.js block');
     });
+  }
+
+  // Remove trailing whitespace from the custom playground code
+  function trimCustom() {
+    const editor = window.customEditor;
+    const raw = editor ? editor.getValue() : document.getElementById('customJson').value;
+    const trimmed = raw.replace(/[ \t]+$/gm, '');
+    if (editor) {
+      editor.setValue(trimmed, -1);
+    }
+    document.getElementById('customJson').value = trimmed;
+    log('🧹 Trailing spaces removed');
   }
 
   function log(msg) {
@@ -442,8 +512,17 @@ dataLayer.push({
     copyDLBtn.textContent = 'Copy as datalayer.js block';
     copyDLBtn.className = 'small-button';
 
+    // Utility to trim trailing whitespace from the editor content
+    const trimBtn = document.createElement('button');
+    trimBtn.textContent = 'Trim spaces';
+    trimBtn.className = 'small-button';
+    // Hidden by default; will be toggled on editor state changes.
+    trimBtn.style.display = 'none';
+
+
     actions.appendChild(copyBtn);
     actions.appendChild(copyDLBtn);
+    actions.appendChild(trimBtn);
 
     // Construct header
     header.appendChild(headerLeft);
@@ -493,6 +572,17 @@ dataLayer.push({
       });
     };
 
+    // Trim trailing spaces when requested
+    trimBtn.onclick = () => {
+      const code = editorInstance ? editorInstance.getValue() : textarea.value;
+      const trimmed = code.replace(/[ \t]+$/gm, '');
+      if (editorInstance) {
+        editorInstance.setValue(trimmed, -1);
+      }
+      textarea.value = trimmed;
+      log('🧹 Trailing spaces removed');
+    };
+
     wrapper.appendChild(header);
     wrapper.appendChild(editorDiv);
     wrapper.appendChild(textarea);
@@ -514,17 +604,29 @@ dataLayer.push({
           textarea.value = editorInstance.getValue();
         });
 
-        // Monitor annotations to toggle the run button colour when errors are present
+        // Monitor annotations and content to toggle the run button colour
+        // and display a trim‑spaces button when trailing whitespace is present.
         const session = editorInstance.getSession();
         const updateButtonState = () => {
+          // Determine if any syntax errors are present
           const anns = session.getAnnotations() || [];
           const hasError = anns.some(a => a.type === 'error');
+          // Detect trailing whitespace by scanning each line of the editor contents.
+          const code = editorInstance.getValue();
+          const lines = code.split('\n');
+          const hasTrailing = lines.some(l => /[ \t]+$/.test(l));
+          // Apply visual states: red for errors, yellow for only trailing whitespace.
           runBtn.classList.toggle('error-button', hasError);
+          runBtn.classList.toggle('warn-button', !hasError && hasTrailing);
+          // Show the trim button only when trailing whitespace exists and no syntax error.
+          trimBtn.style.display = (hasTrailing && !hasError) ? 'inline-block' : 'none';
         };
         updateButtonState();
+        // Listen for changes in annotations (errors/warnings) and editor text
         session.on('changeAnnotation', updateButtonState);
+        session.on('change', updateButtonState);
 
-        // Resize the editor when the container is resized by the user
+        // Resize the Ace editor when the container is resized by the user
         editorDiv.addEventListener('mouseup', () => {
           editorInstance.resize();
         });
@@ -650,17 +752,27 @@ dataLayer.push({
       });
       window.customEditor = customEditor;
 
-      // Attach error state styling to the playground push button
+      // Attach state styling and trailing whitespace detection to the playground push button
       const customRunBtn = document.querySelector('.custom-js-section .preset-header-left button');
-      if (customRunBtn) {
+      const customTrimBtn = document.getElementById('customTrimBtn');
+      if (customRunBtn && customTrimBtn) {
         const session = customEditor.getSession();
         const updatePlaygroundButton = () => {
           const anns = session.getAnnotations() || [];
           const hasError = anns.some(a => a.type === 'error');
+          // Detect trailing whitespace in custom editor
+          const code = customEditor.getValue();
+          const lines = code.split('\n');
+          const hasTrailing = lines.some(l => /[ \t]+$/.test(l));
+          // Apply button styles
           customRunBtn.classList.toggle('error-button', hasError);
+          customRunBtn.classList.toggle('warn-button', !hasError && hasTrailing);
+          // Show the custom trim button only when there is trailing whitespace and no syntax error
+          customTrimBtn.style.display = (hasTrailing && !hasError) ? 'inline-block' : 'none';
         };
         updatePlaygroundButton();
         session.on('changeAnnotation', updatePlaygroundButton);
+        session.on('change', updatePlaygroundButton);
       }
 
       // Allow resizing of the custom editor and refresh layout on mouseup
